Stubbed out trail segment transform step

--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -49,8 +49,14 @@
                     </tr>
                 </thead>
                 <tbody>
+                    
                 </tbody>
             </table>
+            <form action="/datasets/{{ dataset.id }}/transform-segments" method=post>
+                <p>
+                    <button>Transform</button>
+                </p>
+            </form>
 
         </section>
 
