--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -26,11 +26,6 @@
 
 	<!-- CUSTOM STYLES -->
 	<link rel="stylesheet" href="../static/css/app.css" />
-
-    {% if opentrails_segments %}
-    <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
-    {% endif %}
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
 
@@ -46,178 +41,6 @@
     <form id="start" action="/new-dataset" method=post>
     <button>YO</button>
     </form>
-	<!-- <section class="layout-semibreve slab-gray" id="steward-form">
-		<form id="stewards" action="/new-steward" method=post enctype=multipart/form-data>
-			<h3 class="h3">Create your Organization Profile</h3>
-			<p>Tell us about your organization. This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
-			<ul class="list-form">
-        <li class="form-field-group">
-            <div class="form-field">
-              <label for="name">Organization Name<abbr title="Required">*</abbr></label>
-              <input name="name" class="input" type="text" required/>
-            </div>
-            <div class="form-field">
-              <label for="url">Web Address <abbr title="Required">*</abbr></label>
-              <input name="url" class="input" type="url" placeholder="http://example.com" required/>
-            </div>
-        </li>
-        <input type=submit id="steward-form-submit-btn" class="button">
-      </ul>
-		</form>
-	</section> -->
-    {% endif %}
 
-    {% if steward %}
-    <section class="layout-semibreve slab-gray" id="steward">
-        <h3 class="h3">Your Organization Profile</h3>
-        <p>This information helps data consumers understand where this data came from, and who to get in touch with if needed. This same information is used by visitors who may need assistance while visiting your lands or trails.</p>
-        <div class="layout-minim">
-            <p id="steward-name">
-                {{ steward.name }}
-            </p>
-            <p id="steward-email">
-                {{ steward.email }}
-            </p>
-        </div>
-        <div class="layout-minim">
-            <p id="steward-phone">
-                {{ steward.phone }}
-            </p>
-            <p id="steward-url">
-                {{ steward.url }}
-            </p>
-        </div>
-
-    </section>
-
-        {% if steward.status == "needs segments" %}
-        <section class="layout-semibreve">
-            <h3 class="h3">Upload your trail data!!!!</h3>
-            <p>Give it all to us!</p>
-            <form action="/stewards/{{ steward.id }}/upload" method=post enctype=multipart/form-data>
-                <p>
-                    <input type=file name=file>
-                    <input type=hidden name="trailtype" value="segments">
-                    <input type=submit value=Upload>
-                </p>
-            </form>
-        </section>
-        {% endif %}
-
-        {% if sample_segment %}
-        <section class="layout-semibreve">
-            <table id="original-sample">
-                <thead>
-                    <tr>
-                        <th colspan="5">Sample Segment Data</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-            {% if not opentrails_sample_segment %}
-            <img src="{{ url_for('static', filename = 'img/dark-helmet.jpg') }}">
-            <a href="/stewards/{{steward.id}}/transform/segments" class="button-alternative button-progress">Commence the transforming!</a>
-            {% endif %}
-        </section>
-
-        <script>
-            var geojson = {{ sample_segment | tojson | safe }}
-            // For each property make a column
-            $("#original-sample tbody").append("<tr>")
-            $.each(geojson['features'][0]['properties'], function(key, property){
-                $("#original-sample tbody").append("<td>"+key+"</td>")
-            })
-            $("#original-sample tbody").append("</tr>")
-            $("#original-sample tbody").append("<tr>")
-            $.each(geojson['features'][0]['properties'], function(key, property){
-                $("#original-sample tbody").append("<td>"+property+"</td>")
-            })
-            $("#original-sample tbody").append("</tr>")
-
-            // $.each(geojson['features'][0]['properties'], function(key, property){
-            //     $("#column-names").prepend("<input type='radio' name='id-column' value="+key+">"+key)
-            // })
-            
-        </script>
-
-        {% endif %}
-
-        {% if opentrails_sample_segment %}
-
-        <section class="layout-semibreve">
-            <table id="transformed-sample">
-                <thead>
-                    <tr>
-                        <th colspan="10">Sample Transformed Segment Data</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </section>
-
-        <script>
-            var geojson = {{ opentrails_sample_segment | tojson | safe }}
-            // For each property make a column
-            $("#transformed-sample tbody").append("<tr>")
-            $.each(geojson['features'][0]['properties'], function(key, property){
-                $("#transformed-sample tbody").append("<td>"+key+"</td>")
-            })
-            $("#transformed-sample tbody").append("</tr>")
-            $("#transformed-sample tbody").append("<tr>")
-            $.each(geojson['features'][0]['properties'], function(key, property){
-                $("#transformed-sample tbody").append("<td>"+property+"</td>")
-            })
-            $("#transformed-sample tbody").append("</tr>")
-
-            // $.each(geojson['features'][0]['properties'], function(key, property){
-            //     $("#column-names").prepend("<input type='radio' name='id-column' value="+key+">"+key)
-            // })
-            
-        </script>
-
-        {% endif %}
-
-        {% if steward.status == "trailheads" %}
-        <section class="layout-semibreve">
-            <h3 class="h3">Upload your trailheads!!!!</h3>
-            <p>Give it all to us!</p>
-            <form action="/stewards/{{ steward.id }}/upload" method=post enctype=multipart/form-data>
-                <p>
-                    <input type=file name=file>
-                    <input type=hidden name="trailtype" value="trailheads">
-                    <input type=submit value=Upload>
-                </p>
-            </form>
-        </section>
-
-        {% endif %}
-
-        {% if trailheads_geojson %}
-
-        <section class="layout-semibreve">
-            <h3>Trail Heads</h3>
-            <div id="trailhead-map"></div>
-        </section>
-
-       <script>
-        var trailheads = {{ trailheads_geojson | tojson | safe }}
-        var trailheadsmap = L.mapbox.map('trailhead-map', 'codeforamerica.i7jo99nd')
-        trailheadsgeojsonLayer = L.geoJson(trailheads, {
-            style: function (feature) {
-                return {color: "red"};
-            }
-        })
-        trailheadsgeojsonLayer.addTo(trailheadsmap);
-        trailheadsmap.fitBounds(trailheadsgeojsonLayer.getBounds());
-        </script>        
-
-        {% endif %}
-
-
-    {% endif %}
-
-<script>
-</script>
+</body>
 </html>
