--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
 	<!-- CUSTOM STYLES -->
-	<link rel="stylesheet" href="../static/css/app.css" />
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" />
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 </head>
 
