--- a/open_trails/templates/datasets_list.html
+++ b/open_trails/templates/datasets_list.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
     <!-- CUSTOM STYLES -->
-    <link rel="stylesheet" href="../static/css/app.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" />
 </head>
 
 <!-- Remove this inline style -->
