Started name-trails action after transform (issue #35)

--- a/open_trails/templates/dataset-03-transformed-segments.html
+++ b/open_trails/templates/dataset-03-transformed-segments.html
@@ -59,6 +59,13 @@
                 <tbody>
                 </tbody>
             </table>
+            {% if transform_succeeded %}
+            <form action="/datasets/{{ dataset.id }}/name-trails" method=post>
+                <p>
+                    <button>Name Trails</button>
+                </p>
+            </form>
+            {% endif %}
         </section>
 
         <script>
