--- a/open_trails/templates/dataset-03-transformed-segments.html
+++ b/open_trails/templates/dataset-03-transformed-segments.html
@@ -39,13 +39,13 @@
         <section class="layout-semibreve">
             <h3>Notes</h3>
             <ul>
-                {% for (level, words) in messages %}
+                {% for (level, id, words) in messages %}
                     {% if level == 'warning' %}
-                        <li class="alert-info">{{ words }}</li>
+                        <li class="alert-info"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% elif level == 'error' %}
-                        <li class="alert-failure">{{ words }}</li>
+                        <li class="alert-failure"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% else %}
-                        <li class="alert">{{ words }}</li>
+                        <li class="alert"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
