Added primitive download of Open Trails zipped data (closes #52)

--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -35,6 +35,10 @@
 	        <h3 class="h3">Parks and trails are a cornerstone of public health and quality of life. The Public Land and Trail Specification helps citizens get outdoors to enjoy them.</h3>
 
 	</section>
+	
+	<p>
+	Download <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.
+	</p>
 
 </body>
 </html>
