Added Olark contact code for the confused

--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -40,5 +40,6 @@
 	Download <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.
 	</p>
 
+    {% include "script-olark.html" %}
 </body>
 </html>
