first pass at full page copy for home

--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -31,7 +31,9 @@
 
 <body>
     {% include "headline.html" %}
-<!-- When the CSS is right, we will include a step-tracker here -->
+    {% include "under-development.html" %}
+    {% include "step-tracker-placeholder.html" %}
+
     <section class="layout-semibreve">
         <h3 class="h3">Upload your trail data</h3>
         <h4 class="h4">Prepare a single ZIP file containing the data you would like to convert, and upload it here.</h4>
