--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -31,6 +31,8 @@
 
 <body>
     {% include 'headline.html' %}
+    {% include "under-development.html" %}
+    {% include "step-tracker-placeholder.html" %}
 
     <section class="layout-semibreve">
         <h4>Review & Initiate</h4>
