--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -30,15 +30,12 @@
 </head>
 
 <body>
-	<section class="layout-semibreve layout-centered">
-
-	        <h3 class="h3">Parks and trails are a cornerstone of public health and quality of life. The Public Land and Trail Specification helps citizens get outdoors to enjoy them.</h3>
-
-	</section>
-	
-	<p>
-	Download <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.
-	</p>
+    {% include "headline.html" %}
+    {% include "under-development.html" %}
+    {% include "step-tracker-placeholder.html" %}
+    <section class="layout-semibreve">
+        <p>Download <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.</p>
+    </section>
 
     {% include "script-olark.html" %}
 </body>
